--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -185,7 +185,7 @@
         "text-account-details": "Kontodetails",
         "text-change-password": "Passwort ändern",
         "text-change-your-password": "Passwort ändern",
-        "text-logout": "Abmelden",
+        "logout": "Abmelden",
         "text-unit-price": "Stückpreis",
         "text-price": "Preis",
         "text-shopping-cart": "Warenkorb",
