--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -185,7 +185,7 @@
         "text-account-details": "Account Details",
         "text-change-password": "Change Password",
         "text-change-your-password": "change your password",
-        "text-logout": "Logout",
+        "logout": "Logout",
         "text-unit-price": "Unit Price",
         "text-price": "Price",
         "text-shopping-cart": "Shopping cart",
